<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/iconSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/dark_grey"
    android:orientation="vertical"
    tools:context=".ui.SettingsActivity">

    <include layout="@layout/item_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/edit_apps_title"
                android:textColor="@color/gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <FrameLayout
                style="@style/DisTheme.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/mailView"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawableLeft="@drawable/ic_mail"
                    android:drawableTint="@color/gray"
                    android:text="@string/action_mail"
                    android:textColor="@color/gray" />

                <CheckBox
                    android:id="@+id/mailBtnPreference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:button="@drawable/checkbox" />
            </FrameLayout>

            <FrameLayout
                style="@style/DisTheme.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cloudView"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_cloud"
                    android:drawableLeft="@drawable/ic_cloud"
                    android:drawableTint="@color/gray"
                    android:text="@string/Cloud"
                    android:textColor="@color/gray" />

                <CheckBox
                    android:id="@+id/cloudBtnPreference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:button="@drawable/checkbox" />
            </FrameLayout>

            <FrameLayout
                style="@style/DisTheme.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_chat"
                    android:drawableLeft="@drawable/ic_chat"
                    android:drawableTint="@color/gray"
                    android:text="@string/action_chat"
                    android:textColor="@color/gray" />

                <CheckBox
                    android:id="@+id/chatBtnPreference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:button="@drawable/checkbox" />
            </FrameLayout>

            <FrameLayout
                style="@style/DisTheme.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_pad"
                    android:drawableLeft="@drawable/ic_pad"
                    android:drawableTint="@color/gray"
                    android:text="@string/action_pad"
                    android:textColor="@color/gray" />

                <CheckBox
                    android:id="@+id/padBtnPreference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:button="@drawable/checkbox" />
            </FrameLayout>

            <FrameLayout
                style="@style/DisTheme.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_cryptpad"
                    android:drawableLeft="@drawable/ic_cryptpad"
                    android:drawableTint="@color/gray"
                    android:text="@string/action_cryptpad"
                    android:textColor="@color/gray" />

                <CheckBox
                    android:id="@+id/cryptpadBtnPreference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:button="@drawable/checkbox" />
            </FrameLayout>

            <FrameLayout
                style="@style/DisTheme.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_bin"
                    android:drawableLeft="@drawable/ic_bin"
                    android:drawableTint="@color/gray"
                    android:text="@string/action_bin"
                    android:textColor="@color/gray" />

                <CheckBox
                    android:id="@+id/binBtnPreference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:button="@drawable/checkbox" />
            </FrameLayout>

            <FrameLayout
                style="@style/DisTheme.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_upload"
                    android:drawableLeft="@drawable/ic_upload"
                    android:drawableTint="@color/gray"
                    android:text="@string/action_upload"
                    android:textColor="@color/gray" />

                <CheckBox
                    android:id="@+id/uploadBtnPreference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:button="@drawable/checkbox" />
            </FrameLayout>

            <FrameLayout
                style="@style/DisTheme.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_searx"
                    android:drawableLeft="@drawable/ic_searx"
                    android:drawableTint="@color/gray"
                    android:text="@string/action_searx"
                    android:textColor="@color/gray" />

                <CheckBox
                    android:id="@+id/searxBtnPreference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:button="@drawable/checkbox" />
            </FrameLayout>

            <FrameLayout
                style="@style/DisTheme.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_dscribe"
                    android:drawableLeft="@drawable/ic_dscribe"
                    android:drawableTint="@color/gray"
                    android:text="@string/action_dscribe"
                    android:textColor="@color/gray" />

                <CheckBox
                    android:id="@+id/dscribeBtnPreference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:button="@drawable/checkbox" />
            </FrameLayout>

            <FrameLayout
                style="@style/DisTheme.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_calls"
                    android:drawableLeft="@drawable/ic_calls"
                    android:drawableTint="@color/gray"
                    android:text="@string/action_calls"
                    android:textColor="@color/gray" />

                <CheckBox
                    android:id="@+id/callsBtnPreference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:button="@drawable/checkbox" />
            </FrameLayout>

            <FrameLayout
                style="@style/DisTheme.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_notes"
                    android:drawableLeft="@drawable/ic_notes"
                    android:drawableTint="@color/gray"
                    android:text="@string/action_notes"
                    android:textColor="@color/gray" />

                <CheckBox
                    android:id="@+id/notesBtnPreference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:button="@drawable/checkbox" />
            </FrameLayout>

            <FrameLayout
                style="@style/DisTheme.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_git"
                    android:drawableLeft="@drawable/ic_git"
                    android:drawableTint="@color/gray"
                    android:text="@string/action_git"
                    android:textColor="@color/gray" />

                <CheckBox
                    android:id="@+id/gitBtnPreference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:button="@drawable/checkbox" />
            </FrameLayout>

            <FrameLayout
                style="@style/DisTheme.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_user"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawableTint="@color/gray"
                    android:text="@string/action_user"
                    android:textColor="@color/gray" />

                <CheckBox
                    android:id="@+id/userBtnPreference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:button="@drawable/checkbox" />
            </FrameLayout>

            <FrameLayout
                style="@style/DisTheme.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_howto"
                    android:drawableLeft="@drawable/ic_howto"
                    android:drawableTint="@color/gray"
                    android:text="@string/action_howto"
                    android:textColor="@color/gray" />

                <CheckBox
                    android:id="@+id/howToBtnPreference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:button="@drawable/checkbox" />
            </FrameLayout>

            <FrameLayout
                style="@style/DisTheme.Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_about"
                    android:drawableLeft="@drawable/ic_about"
                    android:drawableTint="@color/gray"
                    android:text="@string/action_about"
                    android:textColor="@color/gray" />

                <CheckBox
                    android:id="@+id/aboutBtnPreference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:button="@drawable/checkbox" />
            </FrameLayout>
        </GridLayout>
    </ScrollView>
</LinearLayout>